// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should return result 1`] = `
{
  "altNames": [],
  "copyright": "section copyright",
  "demo": false,
  "description": "Playrun description",
  "difficulty": 4,
  "difficultyXtra": "X",
  "distance": 2.44,
  "drop": 101.1,
  "duration": 10,
  "favorite": false,
  "flows": null,
  "flowsText": "Playrun flows",
  "gauge": {
    "code": "nor1",
    "flowUnit": "m3/s",
    "latestMeasurement": null,
    "levelUnit": "cm",
    "location": null,
    "name": "Norway gauge 1",
    "source": {
      "name": "Norway",
      "termsOfUse": null,
    },
    "timezone": "Europe/Oslo",
    "url": "http://yarr.ru",
  },
  "helpNeeded": "please proofread this",
  "hidden": false,
  "levels": {
    "approximate": false,
    "formula": null,
    "impossible": null,
    "maximum": null,
    "minimum": 100,
    "optimum": null,
  },
  "license": {
    "name": "Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)",
    "slug": "CC_BY-SA",
    "url": "https://creativecommons.org/licenses/by-sa/4.0/",
  },
  "media": {
    "count": 0,
    "nodes": [],
  },
  "name": "Playrun",
  "pois": [
    {
      "coordinates": [
        10,
        12,
        0,
      ],
      "description": "pt 1 d",
      "kind": "other",
      "name": "playrun pt 1",
    },
    {
      "coordinates": [
        33,
        34,
        0,
      ],
      "description": "pt 2 d",
      "kind": "portage",
      "name": "playrun pt 2",
    },
  ],
  "putIn": {
    "coordinates": [
      33,
      33,
      0,
    ],
    "kind": "put-in",
  },
  "rating": 5,
  "region": {},
  "river": {
    "altNames": [
      "Shoa",
      "Sjøa",
    ],
    "name": "Sjoa",
  },
  "season": "Playrun season",
  "seasonNumeric": [
    1,
    2,
    3,
  ],
  "shape": [
    [
      33,
      33,
      0,
    ],
    [
      34,
      42,
      0,
    ],
    [
      34,
      43,
      0,
    ],
  ],
  "tags": [
    {
      "category": "kayaking",
      "name": "Waterfalls",
    },
    {
      "category": "hazards",
      "name": "Undercuts",
    },
  ],
  "takeOut": {
    "coordinates": [
      34,
      43,
      0,
    ],
    "kind": "take-out",
  },
  "timezone": "Etc/GMT-2",
  "verified": true,
}
`;

exports[`update should return result 1`] = `
{
  "altNames": [],
  "copyright": "section copyright",
  "demo": false,
  "description": "Playrun description",
  "difficulty": 4,
  "difficultyXtra": "X",
  "distance": 2.44,
  "drop": 101.1,
  "duration": 10,
  "favorite": false,
  "flows": null,
  "flowsText": "Playrun flows",
  "gauge": {
    "code": "gal1",
    "flowUnit": "m3/s",
    "latestMeasurement": {
      "flow": null,
      "level": 1.2,
    },
    "levelUnit": "cm",
    "location": {
      "coordinates": [
        1.1,
        2.2,
        3.3,
      ],
      "kind": "gauge",
    },
    "name": "Galicia gauge 1",
    "source": {
      "name": "Galicia",
      "termsOfUse": "Terms of use for Galicia",
    },
    "timezone": "Europe/Madrid",
    "url": "http://ya.ru",
  },
  "helpNeeded": "fix take-out",
  "hidden": false,
  "levels": {
    "approximate": false,
    "formula": null,
    "impossible": null,
    "maximum": null,
    "minimum": 100,
    "optimum": null,
  },
  "license": {
    "name": "Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)",
    "slug": "CC_BY-SA",
    "url": "https://creativecommons.org/licenses/by-sa/4.0/",
  },
  "media": {
    "count": 1,
    "nodes": [
      {
        "copyright": "Video 2 copyright",
        "description": "Video 2 description",
        "kind": "video",
        "license": null,
        "resolution": [
          1920,
          1080,
        ],
        "url": "http://some2.video",
        "weight": 0,
      },
    ],
  },
  "name": "Playrun",
  "pois": [
    {
      "coordinates": [
        2.1,
        2.3,
        3.4,
      ],
      "description": "Updated poi description ",
      "kind": "other",
      "name": "Updated poi name",
    },
    {
      "coordinates": [
        66,
        77,
        0,
      ],
      "description": "Updated new poi 1 description",
      "kind": "portage",
      "name": "Updated new poi 1 name",
    },
    {
      "coordinates": [
        50.1,
        50.2,
        333,
      ],
      "description": "Updated new poi 2 description",
      "kind": "other",
      "name": "Updated new poi 2 name",
    },
  ],
  "putIn": {
    "coordinates": [
      33,
      33,
      0,
    ],
    "kind": "put-in",
  },
  "rating": 5,
  "region": {},
  "river": {
    "altNames": [],
    "name": "Beca",
  },
  "season": "Playrun season",
  "seasonNumeric": [
    1,
    2,
    3,
  ],
  "shape": [
    [
      33,
      33,
      0,
    ],
    [
      34,
      42,
      0,
    ],
    [
      34,
      43,
      0,
    ],
  ],
  "tags": [
    {
      "category": "kayaking",
      "name": "Creeking",
    },
    {
      "category": "hazards",
      "name": "Undercuts",
    },
    {
      "category": "supply",
      "name": "Snowmelt",
    },
  ],
  "takeOut": {
    "coordinates": [
      34,
      43,
      0,
    ],
    "kind": "take-out",
  },
  "timezone": "Etc/GMT-2",
  "verified": true,
}
`;
